--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celebrity Portrait Prompts Generator Pro</title>
-    <link rel="stylesheet" href="enhanced-style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -248,6 +248,6 @@
         </div>
     </div>
 
-    <script src="enhanced-script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
