--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <title>Celebrity Portrait Prompts Generator Pro</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="app-container">
-        <!-- Enhanced Header -->
-        <header class="app-header">
-            <div class="header-content">
-                <h1><i class="fas fa-palette"></i> Celebrity Portrait Prompts Pro</h1>
-                <p>Generate detailed, customizable illustration prompts with advanced celebrity library</p>
-                <div class="header-controls">
-                    <button id="userProfileBtn"><i class="fas fa-user"></i></button>
-                    <button id="historyBtn"><i class="fas fa-history"></i></button>
-                    <button id="themeToggle"><i class="fas fa-moon"></i></button>
-                </div>
+        <!-- Compact Sticky Header -->
+        <header class="top-bar">
+            <div class="logo"><i class="fas fa-palette"></i> CelebPrompt AI</div>
+            <div class="header-controls">
+                <button id="historyBtn"><i class="fas fa-history"></i> Prompt History</button>
+                <button id="userProfileBtn"><i class="fas fa-user"></i> User Profile</button>
+                <button id="themeToggle" class="icon-btn" aria-label="Toggle theme"><i class="fas fa-moon"></i></button>
             </div>
         </header>
 
