Expand prompt categories and libraries

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                                 <option value="hiphop">Hip-Hop Artists</option>
                                 <option value="sports">Sports</option>
                                 <option value="kpop">K-Pop</option>
+                                <option value="influencers">Influencers</option>
+                                <option value="models">Models</option>
+                                <option value="directors">Directors</option>
                             </select>
                         </div>
                         <div class="filter-group">
@@ -172,7 +175,7 @@
                         <div class="features-highlight">
                             <div class="feature-item">
                                 <i class="fas fa-database"></i>
-                                <span>500+ Celebrity Database</span>
+                                <span>Extensive Celebrity Database</span>
                             </div>
                             <div class="feature-item">
                                 <i class="fas fa-filter"></i>
